# Tutorial_AwesomeModernCPP

./: .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTORS.md  README.en.md  README.md  package.json  pnpm-lock.yaml
.githooks/: pre-commit
.github/workflows/: build-check.yml
changelogs/: v0.2.0.md  v0.3.0.md  v0.6.0.md
code/stm32f1-tutorials/3_uart_logger/: .clang-format  CMakeLists.txt  STM32F103C8TX_FLASH.ld  chmod_usb.sh  main.cpp  stm32f1xx_hal_conf.h
code/stm32f1-tutorials/3_uart_logger/base/: circular_buffer.hpp  simple_singleton.hpp
code/stm32f1-tutorials/3_uart_logger/device/: button.hpp  button_event.hpp  led.hpp
code/stm32f1-tutorials/3_uart_logger/device/gpio/: gpio.hpp
code/stm32f1-tutorials/3_uart_logger/device/uart/: uart_config.hpp  uart_driver.hpp  uart_error.hpp  uart_manager.hpp
code/stm32f1-tutorials/3_uart_logger/system/: CMakeLists.txt  clock.cpp  clock.h  dead.hpp  hal_mock.c  printf_redirect.cpp  syscall.c  uart_irq.cpp
code/volumn_codes/vol10/cppcon/2025/01-concept-based-generic-programming/: 01-01-narrowing-demo.cpp  01-02-number-concept.cpp  01-03-narrowing-concept.cpp  01-04-narrow-convert.cpp  01-05-number-arithmetic.cpp  01-06-overflow-not-caught.cpp  02-01-safe-int-operators.cpp  02-02-comparison-trap.cpp  02-03-safe-comparison.cpp  02-04-checked-span.cpp  02-05-span-helpers.cpp  03-01-ctad-number.cpp  03-02-safe-sort-concepts.cpp  03-03-range-sort.cpp  03-04-sortable-iterator-requirement.cpp  03-05-can-add-concept.cpp  04-01-forward-sort-overload.cpp  04-02-use-patterns.cpp  05-01-smart-ptr-concept.cpp  05-02-safe-pair.cpp  06-01-power-of-two-concept.cpp  06-02-oop-vs-generic-draw.cpp  07-01-partial-concept-number.cpp  07-02-concept-function-param.cpp  08-01-advance-if-constexpr.cpp  08-02-concept-type-system.cpp  08-03-concept-param-demo.cpp  08-04-safe-numeric-convert.cpp  09-01-concept-value-param.cpp  CMakeLists.txt
code/volumn_codes/vol10/cppcon/2025/02-some-assembly-required/: 02-00-add-demo.cpp  02-00-demo-O0.S  02-00-demo-O1.S  02-00-matmul-test.cpp  02-01-reverse-cpp.cpp  02-02-bit-lookup.cpp  02-03-stl-generic.cpp  02-04-explicit-instantiation.cpp  02-05-optional-and-then.cpp  02-06-span-basics.cpp  02-07-proposal-tracker.cpp  02-08-abi-square-x86.cpp  02-09-abi-sum-seven.cpp  03-01-square-asm.cpp  03-02-check-length.cpp  05-01-arm32-nv-condition.c  05-02-consteval-endian-broken.cpp  05-03-consteval-endian-fixed.cpp  05-04-count-char-vec.cpp  05-05-shared-ptr-compare.cpp  05-06-filesystem-compare.cpp  05-07-optional-transform.cpp  05-08-span-demo.cpp  06-01-header-inline-odr.cpp  CMakeLists.txt
code/volumn_codes/vol6-performance/ch00/: CMakeLists.txt  README.md  vector_vs_set.cpp
code/volumn_codes/vol6-performance/ch01/: CMakeLists.txt  README.md  perf-env-check.sh  push_bench.cpp
code/volumn_codes/vol8-labs/ai/tiny_ml/stage0/: CMakeLists.txt
code/volumn_codes/vol8-labs/ai/tiny_ml/stage0/logs/: 001-mkdir-p-brace-expansion.md  002-fetchcontent-catch2.md  003-target-compile-options.md
code/volumn_codes/vol8-labs/ai/tiny_ml/stage0/tests/: smoke.cpp
code/volumn_codes/vol8-labs/ai/tiny_ml/stage1/tests/: CMakeLists.txt  tensor_api.cpp
code/volumn_codes/vol9/full_tutorial_codes/chrome_design/: 12_intrusive_refcount.cpp  13_atomic_flag.cpp  14_sequence_checker.cpp  15_concepts_requires.cpp  16_weak_ptr_skeleton.cpp  17_weak_ptr_factory.cpp  18_bind_weakptr_cancel.cpp  19_flat_map_basic.cpp  20_lookup_vs_shift_perf.cpp  21_sorted_unique_tag.cpp  22_bulk_build_extract.cpp  23_no_destructor_basic.cpp  24_placement_new_and_storage.cpp  25_static_assert_gatekeep.cpp  CMakeLists.txt  cm.cpp  flat_map.hpp  no_destructor.hpp  weak_ptr.hpp
documents/: .pages  404.md  index.md
documents/appendix/: terminology.md
documents/community/: index.md
documents/compilation/: 01-compilation-and-linking-overview.md  02-reuse-concept.md  03-creating-and-using-static-libs.md  04-dynamic-libraries-1.md  05-dynamic-library-design.md  06-symbol-visibility.md  07-symbol-missing-and-runtime-loading.md  08-library-search-logic.md  09-dynamic-library-details.md  10-dynamic-lib-as-executable.md
documents/en/: 404.md  index.md  tags.md
documents/roadmap/: index.md
documents/team/: index.md
documents/vol1-fundamentals/: 02-c-language-crash-course.md  03A-cpp98-namespace-reference.md  03B-cpp98-function-overload-default-args.md  03C-cpp98-classes-and-objects.md  03D-cpp98-inheritance-polymorphism.md  03E-cpp98-operator-overloading.md  03F-cpp98-casts-memory-exceptions.md  04-when-to-use-cpp.md
documents/vol10-open-lecture-notes/: index.md
documents/vol3-standard-library/: 01-array.md  01-container-selection-guide.md  01-initializer-lists.md  01-vector-deep-dive.md  02-array.md  02-span.md  02-string-memory-deep-dive.md  03-char8-t-utf8.md  03-vector-deep-dive.md  04-string-memory-deep-dive.md  05-deque-list-forward-list.md  05-object-size-and-trivial-types.md  08-span.md  index.md  (+8 more)
scripts/: build.ts  coverage.py  cppref_manifest.json  setup_precommit.sh  validate_frontmatter.py
todo/: 000-project-roadmap.md  010-esp32-toolchain.md  010-vol1-fundamentals.md  012-stm32f1-uart.md  012-vol3-standard-library.md  013-stm32f1-spi.md  014-stm32f1-i2c.md  015-stm32f1-timer-pwm.md  016-stm32f1-adc.md  017-stm32f1-dma.md  018-stm32f1-flash-watchdog.md  018-vol9-open-source-study.md  019-stm32f1-power-rtc.md  019-vol10-lecture-notes.md  020-stm32f1-interrupt-arch.md  021-stm32f1-projects.md  022-core-theory-expansion.md  023-rtos-scratch-scheduler.md  024-rtos-teaching-rtos.md  025-rtos-freertos.md  026-rtos-rt-thread.md  027-rtos-zephyr.md  030-template-series.md  031-design-patterns.md  031-qa-knowledge-base.md  032-tdd-embedded.md  033-custom-allocators.md  034-stl-embedded.md  035-startup-linker.md  036-dsp-basics.md  037-iot-project.md  038-template-vol1-basics.md  039-template-vol2-modern.md  040-template-vol3-metaprogramming.md  041-template-vol4-design-patterns.md  042-stm32f1-engineering-prep.md  202-vol3-standard-library-outline.md  203-vol4-advanced-outline.md  204-vol5-concurrency-outline.md  205-vol6-performance-outline.md  (+6 more)
(+964 files in other folders)
